# MatchMakerHub

./: .env  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yaml
.github/workflows/: publish-communicator.yml  publish-ezauth.yml  publish-matchmaking-state-types.yml  publish-matchmaking-state.yml  publish-redisadapter-derive.yml  publish.yml
api/: Cargo.toml
api/src/: main.rs
automate/: Dockerfile  auto.py  requirements.txt
automate/scripts/: advanced_search.lua  matches.lua  searchers.lua
communicator/: Cargo.toml  docs.yml  queues.yml
communicator/src/: lib.rs  models.rs  rabbitmq.rs
connector-api/: .env  Cargo.toml  Dockerfile  Dockerfile.dev  build.rs  entrypoint.dev.sh
connector-api/src/: ezauth.rs  handler.rs  main.rs  models.rs
connector-api/src/match_maker/: mod.rs  pool.rs
elo-adapter/: Cargo.toml
ezauth/: Cargo.toml
ezauth/src/: lib.rs  models.rs
games-agent/: Cargo.toml  Dockerfile  Dockerfile.dev  build.rs  entrypoint.dev.sh
games-agent/src/: healthcheck.rs  main.rs  models.rs
match-creator/: Cargo.toml  Dockerfile  Dockerfile.dev  entrypoint.dev.sh
match-creator/src/: main.rs  pool.rs
matchmaker-api/: Cargo.toml  Dockerfile
matchmaker-api/src/: main.rs
matchmaking-state/: Cargo.toml
matchmaking-state-api/: Cargo.toml  Dockerfile  Dockerfile.dev  entrypoint.dev.sh
matchmaking-state-api/src/: main.rs  models.rs  swagger_docs.rs
matchmaking-state-api/src/handler/: active_matches.rs  ai_players.rs  game_servers.rs  host_requests.rs  mod.rs
matchmaking-state-types/: Cargo.toml
matchmaking-state-types/src/: lib.rs
matchmaking-state/redisadapter-derive/: Cargo.toml
matchmaking-state/redisadapter-derive/src/: lib.rs
matchmaking-state/scripts/: auto.py  matches.lua
matchmaking-state/src/: lib.rs  prelude.rs
matchmaking-state/src/adapters/: mod.rs  redis.rs
matchmaking-state/src/adapters/redis/: io.rs
matchmaking-state/src/adapters/redis/publisher/: native.rs
matchmaking-state/src/models/: mod.rs
monitoring-data/: Cargo.toml
monitoring-data/redisadapter_derive/: Cargo.toml
monitoring-data/redisadapter_derive/src/: lib.rs
monitoring-data/src/: lib.rs
monitoring-data/src/adapters/: mod.rs  redis.rs
monitoring-data/src/adapters/redis/: io.rs
monitoring-data/src/models/: mod.rs
