[package]
name = "communicator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
gn-matchmaking-state = { version = "0.1.9" }
gn-matchmaking-state-types = { version = "0.1.0" }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
tracing = "0.1.41"
tokio = { version = "1.38.1", features = ["rt", "macros", "rt-multi-thread"] }
async-trait = "0.1.83"
lapin = "2.5.0"
futures-lite = "2.5.0"
uuid = { version = "1.11.0", features = ["v4"] }

[patch.crates-io]
gn-matchmaking-state = { path = "../matchmaking-state" }
gn-matchmaking-state-types = { path = "../matchmaking-state-types" }
