[package]
name = "connector-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
socketioxide = "*"
tokio = { version = "1.38.1", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
gn-matchmaking-state = { version = "0.1.0", features = ["redis"] }
lazy_static = "1.5.0"
dotenv = "0.15.0"
rand = "0.8.5"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }

[dev-dependencies]
rust_socketio = { version = "*", features = ["async"] }
futures-util = "0.3.30"

[profile.release]
opt-level = 3
