[package]
name = "games-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
tokio = { version = "1.38.1", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
gn-matchmaking-state = { version = "0.1.6" }
tower-http = { version = "0.6.1", features = ["full"] }
tower = "0.5.1"

[profile.release]
opt-level = 3

[build-dependencies]
dotenv = "0.15"

[patch.crates-io]
gn-matchmaking-state = { path = "../matchmaking-state" }
