[package]
name = "games-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
tokio = { version = "1.38.1", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
gn-matchmaking-state = { version = "0.1.9" }
tower-http = { version = "0.6.1", features = ["full"] }
tower = "0.5.1"
lapin = "2.5.0"
futures-lite = "2.5.0"
chrono = "0.4.38"

gn-ranking-client-rs = { path = "../../gn-ranking-client-rs" }
lazy_static = "1.5.0"

[profile.release]
opt-level = 3

[build-dependencies]
dotenv = "0.15"
