[package]
name = "games-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.1", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
gn-matchmaking-state = { version = "0.1.9" }
gn-matchmaking-state-types = { version = "0.1.0" }
tower-http = { version = "0.6.1", features = ["full"] }
tower = "0.5.1"
chrono = "0.4.38"

gn-ranking-client-rs = { path = "../../gn-ranking-client-rs" }
lazy_static = "1.5.0"
itertools = "0.13.0"
gn-communicator = { version = "0.1.1" }
async_once = "0.2.6"

[profile.release]
opt-level = 3

[build-dependencies]
dotenv = "0.15"

[patch.crates-io]
gn-matchmaking-state = { path = "../matchmaking-state" }
gn-matchmaking-state-types = { path = "../matchmaking-state-types" }
