[package]
name = "match-creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gn-communicator = "0.1.2"
gn-matchmaking-state = { version = "0.1.9" }
gn-matchmaking-state-types = { version = "0.1.1" }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
tokio = { version = "1.38.1", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
default = []

[profile.release]
opt-level = 3
