[package]
name = "matchmaking-state-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
gn-matchmaking-state-types = { version = "0.1.2" }
gn-matchmaking-state = { version = "0.1.11" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web", "debug-embed"] }
ezauth = { version = "0.1.0" }
lazy_static = "1.5.0"
tracing-actix-web = "0.7.15"
