[package]
name = "gn-matchmaking-state-types"
version = "0.1.1"
edition = "2021"
description = "Component for shared state-management-types in the game-night backend"
license = "MIT"



[dependencies]
gn-matchmaking-state = { version = "0.1.11", features = ["redis"] }
gn-redisadapter-derive = { version = "0.1.2" }
serde = { version = "1.0.215", features = ["derive"] }

[features]
default = ["redis"]
redis = []

[patch.crates-io]
gn-matchmaking-state = { path = "../matchmaking-state", features = ["redis"] }
gn-redisadapter-derive = { path = "../matchmaking-state/redisadapter-derive" }

