[package]
name = "matchmaking-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.25.4" }
tracing = "0.1.40"
redisadapter-derive = {path = "./redisadapter-derive" }
tokio = { version = "1.39.2", features = ["rt"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"

[features]
default = ["redis"]
redis = []
