[package]
name = "gn-matchmaking-state"
description = "Component for shared state-management in the game-night backend"
license = "MIT"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.25.4" }
tracing = "0.1.40"
gn-redisadapter-derive = "0.1.0"
tokio = { version = "1.39.2", features = ["rt"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"

[features]
default = ["redis"]
redis = []
