[package]
name = "monitoring-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.25.4" }
tracing = "0.1.40"
redisadapter_derive = {path = "./redisadapter_derive" }

[features]
default = ["redis"]
redis = []
